--- a/perl-uri-encode/PKGBUILD.tt
+++ b/perl-uri-encode/PKGBUILD.tt
@@ -1,21 +1,21 @@
-# CPAN Name  : Text-Glob
+# CPAN Name  : URI-Encode
 # Maintainer : Alan Young <harleypig@gmail.com>
-# Generator  : CPANPLUS::Dist::Arch 1.21
+# Generator  : CPANPLUS::Dist::Arch [% version %]
 
-pkgname='perl-text-glob'
-pkgver='0.09'
+pkgname='[% pkgname %]'
+pkgver='[% pkgver %]'
 pkgrel='1'
-pkgdesc="match globbing patterns against text"
+pkgdesc="[% pkgdesc %]"
 arch=('any')
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
-depends=('perl')
-makedepends=()
-url='http://search.cpan.org/dist/Text-Glob'
-source=('http://search.cpan.org/CPAN/authors/id/R/RC/RCLAMP/Text-Glob-0.09.tar.gz')
-md5sums=('1daa10e087f891c49b720a5c551a024b')
-sha512sums=('9b729e4ece88ad79e1b637c7f35e5e1ecae3fd7f62c408ed4f3fcac2e8e8afff32d7d805e1b0269800aada5ae609d03335d42ac54def2797d301e91fa488ae47')
-_distdir="${srcdir}/Text-Glob-0.09"
+depends=([% depends %])
+makedepends=([% makedepends %])
+url='[% url %]'
+source=('[% source %]')
+md5sums=('[% md5sums %]')
+sha512sums=('[% sha512sums %]')
+_distdir="${srcdir}/URI-Encode-[% pkgver %]"
 
 build() {
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""                 \
