--- a/perl-pod-wordlist-hanekomu/PKGBUILD.tt
+++ b/perl-pod-wordlist-hanekomu/PKGBUILD.tt
@@ -25,21 +25,21 @@ build() {
       MODULEBUILDRC=/dev/null
 
     cd "$_distdir"
-    /usr/bin/perl Build.PL
-    /usr/bin/perl Build
+    /usr/bin/perl Makefile.PL
+    make
   )
 }
 
 check() {
   cd "$_distdir"
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""
-    /usr/bin/perl Build test
+    make test
   )
 }
 
 package() {
   cd "$_distdir"
-  /usr/bin/perl Build install
+  make install
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
 
