--- a/perl-version-next/PKGBUILD.tt
+++ b/perl-version-next/PKGBUILD.tt
@@ -1,27 +1,34 @@
-# CPAN Name  : CPAN-Meta-Check
+[%- DEFAULT
+  arch     = [ 'any' ]
+  license  = [ 'PerlArtistic', 'GPL' ]
+  options  = [ '!emptydirs' ]
+  skiptest = 0
+-%]
+# CPAN Name  : Version-Next
 # Maintainer : Alan Young <harleypig@gmail.com>
-# Generator  : CPANPLUS::Dist::Arch 1.21
+# Generator  : CPANPLUS::Dist::Arch [% version %]
+# Repository : http://github.com/harleypig/aur-packages
 
-arch=('any')
-backup=()
-conflicts=()
-depends=('perl-cpan-meta' 'perl-cpan-meta-requirements')
-install=
-license=('PerlArtistic' 'GPL')
-makedepends=('perl-test-differences')
-md5sums=('a05c3d14f1de09416ca601922dd52560')
-options=('!emptydirs')
-pkgdesc="Verify requirements in a CPAN::Meta object"
-pkgname='perl-cpan-meta-check'
-pkgrel='3'
-pkgver='0.004'
-provides=()
-replaces=()
-sha512sums=('651905e815ac4f004a9fc7fda678d265d2b629bc11fe2ad234c0c85531de505bea13f7f64f455ef3790860870599b5365d6a40ad1d0ecf714c90c1cdc78c9a97')
-source=('http://search.cpan.org/CPAN/authors/id/L/LE/LEONT/CPAN-Meta-Check-0.004.tar.gz')
-url='http://search.cpan.org/dist/CPAN-Meta-Check'
+arch=([% arch.join('\' \'') %])
+[% IF backup -%]backup=([% backup.join('\' \'') %])
+[% END %][% IF conflicts -%]conflicts=([% conflicts.join('\' \'') %])
+[% END %]depends=([% depends %])
+[% IF install -%]install=([% install.join('\' \'') %])
+[% END %]license=('[% license.join('\' \'') %]')
+makedepends=([% makedepends %])
+md5sums=('[% md5sums %]')
+options=('[% options.join('\' \'') %]')
+pkgdesc="[% pkgdesc %]"
+pkgname='[% pkgname %]'
+pkgrel='[% pkgrel %]'
+pkgver='[% pkgver %]'
+[% IF provides -%]provides=([% provides.join('\' \'') %])
+[% END %][% IF replaces -%]replaces=([% replaces.join('\' \'') %])
+[% END %]sha512sums=('[% sha512sums %]')
+source=('[% source %]')
+url='[% url %]'
 
-_distdir="${srcdir}/CPAN-Meta-Check-0.004"
+_distdir="${srcdir}/Version-Next-[% pkgver %]"
 
 build() {
 
