--- a/PKGBUILD.tt
+++ b/PKGBUILD.tt
@@ -1,50 +1,104 @@
+[%- DEFAULT
+  arch     = [ 'any' ]
+  license  = [ 'PerlArtistic', 'GPL' ]
+  options  = [ '!emptydirs' ]
+  skiptest = 0
+-%]
 # CPAN Name  : <<CPANName>>
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch [% version %]
+# Repository : http://github.com/harleypig/aur-packages
 
-pkgname='[% pkgname %]'
-pkgver='[% pkgver %]'
-pkgrel='1'
-pkgdesc="[% pkgdesc %]"
-arch=('any')
-license=('PerlArtistic' 'GPL')
-options=('!emptydirs')
-depends=([% depends %])
+arch=([% arch.join('\' \'') %])
+[% IF backup -%]backup=([% backup.join('\' \'') %])
+[% END %][% IF conflicts -%]conflicts=([% conflicts.join('\' \'') %])
+[% END %]depends=([% depends %])
+[% IF install -%]install=([% install.join('\' \'') %])
+[% END %]license=('[% license.join('\' \'') %]')
 makedepends=([% makedepends %])
-url='[% url %]'
-source=('[% source %]')
 md5sums=('[% md5sums %]')
-sha512sums=('[% sha512sums %]')
+options=('[% options.join('\' \'') %]')
+pkgdesc="[% pkgdesc %]"
+pkgname='[% pkgname %]'
+pkgrel='[% pkgrel %]'
+pkgver='[% pkgver %]'
+[% IF provides -%]provides=([% provides.join('\' \'') %])
+[% END %][% IF replaces -%]replaces=([% replaces.join('\' \'') %])
+[% END %]sha512sums=('[% sha512sums %]')
+source=('[% source %]')
+url='[% url %]'
+
 _distdir="${srcdir}/<<CPANName>>-[% pkgver %]"
 
 build() {
-  ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""                 \
-      PERL_AUTOINSTALL=--skipdeps                            \
-      PERL_MM_OPT="INSTALLDIRS=vendor DESTDIR='$pkgdir'"     \
-      PERL_MB_OPT="--installdirs vendor --destdir '$pkgdir'" \
-      MODULEBUILDRC=/dev/null
 
-    cd "$_distdir"
+  export MODULEBUILDRC=/dev/null                                \
+         PERL5LIB=""                                            \
+         PERL_AUTOINSTALL=--skipdeps                            \
+         PERL_MB_OPT="--installdirs vendor --destdir '$pkgdir'" \
+         PERL_MM_OPT="INSTALLDIRS=vendor DESTDIR='$pkgdir'"     \
+         PERL_MM_USE_DEFAULT=1
+
+  cd "$_distdir"
+
+  if [[ -e ./Build.PL ]]; then
+
     /usr/bin/perl Build.PL
-    /usr/bin/perl Build
-  )
+    ./Build
+
+  elif [[ -e ./Makefile.PL ]]; then
+
+    /usr/bin/perl Makefile.PL
+    make
+
+  fi
+
 }
 
 check() {
+
+  export MODULEBUILDRC=/dev/null                                \
+         PERL5LIB=""                                            \
+         PERL_AUTOINSTALL=--skipdeps                            \
+         PERL_MB_OPT="--installdirs vendor --destdir '$pkgdir'" \
+         PERL_MM_OPT="INSTALLDIRS=vendor DESTDIR='$pkgdir'"     \
+         PERL_MM_USE_DEFAULT=1
+
   cd "$_distdir"
-  ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""
-    /usr/bin/perl Build test
-  )
+
+  if [[ -e ./Build.PL ]]; then
+
+    ./Build test
+
+  elif [[ -e ./Makefile.PL ]]; then
+
+    make test
+
+  fi
+
 }
 
 package() {
-  cd "$_distdir"
-  /usr/bin/perl Build install
-  find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
-}
 
-# Local Variables:
-# mode: shell-script
-# sh-basic-offset: 2
-# End:
-# vim:set ts=2 sw=2 et:
+  export MODULEBUILDRC=/dev/null                                \
+         PERL5LIB=""                                            \
+         PERL_AUTOINSTALL=--skipdeps                            \
+         PERL_MB_OPT="--installdirs vendor --destdir '$pkgdir'" \
+         PERL_MM_OPT="INSTALLDIRS=vendor DESTDIR='$pkgdir'"     \
+         PERL_MM_USE_DEFAULT=1
+
+  cd "$_distdir"
+
+  if [[ -e ./Build.PL ]]; then
+
+    ./Build install
+
+  elif [[ -e ./Makefile.PL ]]; then
+
+    make install
+
+  fi
+
+  find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
+
+}
