--- a/perl-devel-beginlift/PKGBUILD.tt
+++ b/perl-devel-beginlift/PKGBUILD.tt
@@ -1,23 +1,34 @@
-# CPAN Name  : DBIx-Class-Schema-Loader
+[%- DEFAULT
+  arch     = [ 'any' ]
+  license  = [ 'PerlArtistic', 'GPL' ]
+  options  = [ '!emptydirs' ]
+  skiptest = 0
+-%]
+# CPAN Name  : Devel-BeginLift
 # Maintainer : Alan Young <harleypig@gmail.com>
-# Generator  : CPANPLUS::Dist::Arch 1.21
+# Generator  : CPANPLUS::Dist::Arch [% version %]
 # Repository : http://github.com/harleypig/aur-packages
 
-arch=('any')
-depends=('perl>=5.8.1' 'perl-carp-clan' 'perl-class-accessor-grouped>=0.10002' 'perl-class-c3-componentised>=1.0008' 'perl-class-inspector>=1.27' 'perl-class-unload' 'perl-data-dump>=1.06' 'perl-dbix-class>=0.08127' 'perl-hash-merge' 'perl-lingua-en-inflect-number>=1.1' 'perl-lingua-en-inflect-phrase>=0.02' 'perl-lingua-en-tagger' 'perl-list-moreutils' 'perl-mro-compat>=0.09' 'perl-namespace-clean>=0.20' 'perl-scope-guard' 'perl-string-camelcase>=0.02' 'perl-string-toidentifier-en>=0.05' 'perl-sub-name' 'perl-task-weaken' 'perl-try-tiny')
-license=('PerlArtistic' 'GPL')
-makedepends=('perl-config-any' 'perl-config-general' 'perl-dbd-sqlite>=1.29' 'perl-dbi>=1.56' 'perl-dbix-class-introspectablem2m' 'perl-moose>=1.12' 'perl-moosex-markasmethods>=0.13' 'perl-moosex-nonmoose>=0.16' 'perl-namespace-autoclean>=0.09' 'perl-test-exception' 'perl-test-warn>=0.21')
-md5sums=('002fa6d750926fff75843597460f0575')
-options=('!emptydirs')
-pkgdesc="Create a DBIx::Class::Schema based on a database"
-pkgname='perl-dbix-class-schema-loader'
-pkgrel='2'
-pkgver='0.07025'
-sha512sums=('94c34279d9469aa8d8ec29abe01a4b4c07fdcca8c323043fbc74cbc4577e9241779d865dc3f9c497a021ff314a7b31972e3027168250295f4f4dbfd3414c7b99')
-source=('http://search.cpan.org/CPAN/authors/id/R/RK/RKITOVER/DBIx-Class-Schema-Loader-0.07025.tar.gz')
-url='http://search.cpan.org/dist/DBIx-Class-Schema-Loader'
+arch=([% arch.join('\' \'') %])
+[% IF backup -%]backup=([% backup.join('\' \'') %])
+[% END %][% IF conflicts -%]conflicts=([% conflicts.join('\' \'') %])
+[% END %]depends=([% depends %])
+[% IF install -%]install=([% install.join('\' \'') %])
+[% END %]license=('[% license.join('\' \'') %]')
+makedepends=([% makedepends %])
+md5sums=('[% md5sums %]')
+options=('[% options.join('\' \'') %]')
+pkgdesc="[% pkgdesc %]"
+pkgname='[% pkgname %]'
+pkgrel='[% pkgrel %]'
+pkgver='[% pkgver %]'
+[% IF provides -%]provides=([% provides.join('\' \'') %])
+[% END %][% IF replaces -%]replaces=([% replaces.join('\' \'') %])
+[% END %]sha512sums=('[% sha512sums %]')
+source=('[% source %]')
+url='[% url %]'
 
-_distdir="${srcdir}/DBIx-Class-Schema-Loader-0.07025"
+_distdir="${srcdir}/Devel-BeginLift-[% pkgver %]"
 
 build() {
 
