more modules added

--- a/perl-cpan-meta-yaml/PKGBUILD.tt
+++ b/perl-cpan-meta-yaml/PKGBUILD.tt
@@ -1,23 +1,34 @@
-# CPAN Name  : Git-CPAN-Patch
+[%- DEFAULT
+  arch     = [ 'any' ]
+  license  = [ 'PerlArtistic', 'GPL' ]
+  options  = [ '!emptydirs' ]
+  skiptest = 0
+-%]
+# CPAN Name  : CPAN-Meta-YAML
 # Maintainer : Alan Young <harleypig@gmail.com>
-# Generator  : CPANPLUS::Dist::Arch 1.21
+# Generator  : CPANPLUS::Dist::Arch [% version %]
 # Repository : http://github.com/harleypig/aur-packages
 
-arch=('any')
-depends=('perl>=5.10.0' 'perl-backpan-index' 'perl-class' 'perl-datetime-format-w3cdtf' 'perl-file-chdir' 'perl-file-chmod' 'perl-git-repository' 'perl-libwww' 'perl-metacpan-api' 'perl-method-signatures' 'perl-moose' 'perl-moosex-app-cmd' 'perl-moosex-semiaffordanceaccessor')
-license=('PerlArtistic' 'GPL')
-makedepends=('perl-test-compile')
-md5sums=('fb958b5c3738cdbbaee22ac55dc68a9d')
-options=('!emptydirs')
-pkgdesc="Patch CPAN modules using Git"
-pkgname='perl-git-cpan-patch'
-pkgrel='1'
-pkgver='0.8.0'
-sha512sums=('efdec02e218581e04520a5c8a6f6b1a59c7d61f0e1e9604de5b05f706bf8a8e82896d674049ae20b75d1aadab8d6ce0d7ed3c70980813ecfd8fddb46127aeec0')
-source=('http://search.cpan.org/CPAN/authors/id/Y/YA/YANICK/Git-CPAN-Patch-0.8.0.tar.gz')
-url='http://search.cpan.org/dist/Git-CPAN-Patch'
+arch=([% arch.join('\' \'') %])
+[% IF backup -%]backup=([% backup.join('\' \'') %])
+[% END %][% IF conflicts -%]conflicts=([% conflicts.join('\' \'') %])
+[% END %]depends=([% depends %])
+[% IF install -%]install=([% install.join('\' \'') %])
+[% END %]license=('[% license.join('\' \'') %]')
+makedepends=([% makedepends %])
+md5sums=('[% md5sums %]')
+options=('[% options.join('\' \'') %]')
+pkgdesc="[% pkgdesc %]"
+pkgname='[% pkgname %]'
+pkgrel='[% pkgrel %]'
+pkgver='[% pkgver %]'
+[% IF provides -%]provides=([% provides.join('\' \'') %])
+[% END %][% IF replaces -%]replaces=([% replaces.join('\' \'') %])
+[% END %]sha512sums=('[% sha512sums %]')
+source=('[% source %]')
+url='[% url %]'
 
-_distdir="${srcdir}/Git-CPAN-Patch-0.8.0"
+_distdir="${srcdir}/CPAN-Meta-YAML-[% pkgver %]"
 
 build() {
 
