added provides to pkgbuild

--- a/perl-yaml-libyaml/PKGBUILD.tt
+++ b/perl-yaml-libyaml/PKGBUILD.tt
@@ -22,8 +22,8 @@ pkgdesc="[% pkgdesc %]"
 pkgname='[% pkgname %]'
 pkgrel='[% pkgrel %]'
 pkgver='[% pkgver %]'
-[% IF provides -%]provides=([% provides.join('\' \'') %])
-[% END %][% IF replaces -%]replaces=([% replaces.join('\' \'') %])
+provides=( 'perl-yaml-xs' 'perl-yaml-xs-libyaml'[% IF provides -%] '[% provides.join('\' \'') %]'[% END %] )
+[% IF replaces -%]replaces=([% replaces.join('\' \'') %])
 [% END %]sha512sums=('[% sha512sums %]')
 source=('[% source %]')
 url='[% url %]'
