updated yaml libyaml to include description

--- a/perl-yaml-libyaml/PKGBUILD.tt
+++ b/perl-yaml-libyaml/PKGBUILD.tt
@@ -18,7 +18,7 @@ arch=([% arch.join('\' \'') %])
 makedepends=([% makedepends %])
 md5sums=('[% md5sums %]')
 options=('[% options.join('\' \'') %]')
-pkgdesc="[% pkgdesc %]"
+pkgdesc="[% pkgdesc || 'Perl/CPAN module YAML::XS : YAML loader and dumper using libyaml' %]"
 pkgname='[% pkgname %]'
 pkgrel='[% pkgrel %]'
 pkgver='[% pkgver %]'
